--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "next-playground",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "16.11.6",
-    "@types/react": "17.0.33",
-    "eslint": "7",
-    "eslint-config-next": "12.0.2",
-    "typescript": "4.4.4"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "latest",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-is": "^17.0.2",
+		"styled-components": "^5.2.3",
+		"styled-reset": "^4.3.4",
+		"swr": "^1.0.1"
+	},
+	"devDependencies": {
+		"@types/node": "^16.11.6",
+		"@types/react": "^17.0.33",
+		"@types/styled-components": "^5.1.15",
+		"babel-plugin-styled-components": "^1.12.0",
+		"eslint": "<8.0.0",
+		"eslint-config-next": "12.0.2",
+		"typescript": "^4.4.4"
+	}
 }
